--- a/css/kina.css
+++ b/css/kina.css
@@ -29,7 +29,7 @@
             font-family: 'Josefin Sans', sans-serif;
         }
 
-        p, a, h4 {
+        p, a {
             font-family: Lato,Helvetica Neue,Verdana,Arial,sans-serif;
         }
 
