--- a/css/kina.css
+++ b/css/kina.css
@@ -243,6 +243,15 @@
             margin: 0.2%;
             width: 24.6%;
         }
+
+        body .instagram-element .instagram-photo:hover img {
+            -webkit-transform: scale(1.1);
+            -moz-transform: scale(1.1);
+            -ms-transform: scale(1.1);
+            -o-transform: scale(1.1);
+            transform: scale(1.1);
+        }
+
         
         @media (max-width: 800px) {
             
