--- a/css/kina.css
+++ b/css/kina.css
@@ -1,289 +1,361 @@
-        
-        .desktop {
-            display:block;
-        }
-        .mobile {
-            display:none;
-        }
-        
-        p, a {
-            color: #000;
-            font-size: 13px;
-            line-height: 18px;
-            letter-spacing: .8px;
-        }
-        p {
-            text-align: center;
-        }
-        p.info {
-            text-align: justify;
-            max-width: 800px;
-            margin: auto;
-        }
-        a {
-            font-size:13px;
-            text-decoration: none;
-            color: #58595b;
-        }
-        h1, h2, h3, h4 {
-            font-family: 'Josefin Sans', sans-serif;
-        }
 
-        p, a {
-            font-family: Lato,Helvetica Neue,Verdana,Arial,sans-serif;
-        }
+.desktop {
+    display:block;
+}
+.mobile {
+    display:none;
+}
 
-        h1 { font-size: 26px; }
-        h2 { font-size: 22px; }
-        h3 { font-size: 20px; }
-        h4 { font-size: 16px; }
-        .middletext {
-            letter-spacing: 2px;
-        }
-        
-        .widetext {
-            letter-spacing: 8px;
-            margin: 8px;
-        }
-        
-        h2.widetext {
-            margin-top: 12px;
-        }
-        
-        .saletext {
-            letter-spacing: 1px;
-            color: #9f2943;
-            max-width: 800px;
-            margin: auto;
-            font-size: 18px;
-            margin-top: 9px;
-            margin-bottom: 6px;
-        }
-        
-        .headline {
-            margin: 0 0 30px 0;
-            text-align: center;
-            text-transform: uppercase;
-            font-size: 20px;
-            border-bottom: 1px solid #000;
-            border-top: 1px solid #000;
-            padding: 15px 0;
-        }
-        .headline span::before, .headline span::after {
-            border-bottom: 1px solid #000000;
-            content: '';
-            position: absolute;
-            bottom: 50%;
-            width: 100%;
-        }
-        .button {
-            background: #000;
-            display: inline-block;
-            padding: 7px 10px;
-            border: 0;
-            color: #FFFFFF;
-            font-size: 16px;
-            font-weight: normal;
-            font-family: 'Josefin Sans', sans-serif;
-            line-height: 19px;
-            text-align: center;
-            text-transform: uppercase;
-            vertical-align: middle;
-            white-space: nowrap;
-            text-decoration: none;
-            padding-top: 9px;
-            margin:20px;
-        }
-        
-        .whitebutton {
-            background: #ffffff;
-            color: #000000;
-            display: inline-block;
-            padding: 14px 20px;
-            font-size: 16px;
-            font-weight: normal;
-            font-family: Lato, Helvetica-Neue, sans-serif;
-            line-height: 19px;
-            text-align: center;
-            text-transform: uppercase;
-            vertical-align: middle;
-            white-space: nowrap;
-            text-decoration: none;
-            margin: 20px;
-            border: black solid 1px;
-        }
-        .whitebutton:hover {
-            background: #000000;
-            color: #ffffff;
-        }
-        
-        .link {
-            color: #000000;
-            display: inline-block;
-            font-weight: normal;
-            font-family: Lato, Helvetica-Neue, sans-serif;
-            line-height: 19px;
-            text-align: center;
-            white-space: nowrap;
-            margin: 0px;
-        }
-        .body {
-            margin: 0;
-            padding: 0;
-            text-align: center;
-            background-color: #ffffff;
-        }
-        .topline {
-            border-top: 1px solid #dbdbdb;
-        }
-        img.logo {
-            width: 100%;
-            min-width: 200px;
-            max-width: 200px;
-            margin-top: 20px;
-            margin-bottom: 5px;
-        }
-        img.img-block {
-            width: 100%;
-            max-width: 600px;
-            min-width: 320px;
-        }
-        /* LAYOUT */
-        .wrapper {
-            max-width: 1200px;
-            margin: auto;
-        }
-        .block {
-            margin-bottom: 40px;
-            overflow: auto;
-        }
-        .header {
-            margin-top: 0px;
-            margin-bottom:0px;
-        }
-        .headertext {
-            letter-spacing: 1px;
-            margin-top: 10px;
-            margin-bottom: 8px;
-        }
-        .white {
-            color: white;
-        }
-        .bgwhite {
-            background-color: #fff;
-        }
-        
-        .bgblack {
-            background-color: #000;
-        }
-        li {
-            display: inline; /* li nebeneinander anzeigen */
-            list-style-type: none; /* ohne Aufzählungspunkte */
-        }
-        
-        .socialbutton { 
-            width: 30%;
-            max-width: 120px;
-            margin-top: 50px;
-            margin-bottom: 50px;
-        }
-        
-        .contacts {
-            max-width: 420px;
-            margin: auto;
-        }
-        .contacts h4 {
-            margin-top:0px;
-        }
-        .icon {
-            display: inline-block;
-            background-position: center;
-            width: 20px;
-            height: 20px;
-            background-repeat: no-repeat;
-            background-size: 100%;
-            margin:8px;
-        }
-        .icon-whatsapp {
-            background-image: url('../images/whatsapp.png');
-        }
-        .icon-mail {
-            background-image: url('../images/mail.png');
-        }
-        
-        body .instagram-photo img {
-            -webkit-transform: scale(1.0);
-            -moz-transform: scale(1.0);
-            -ms-transform: scale(1.0);
-            -o-transform: scale(1.0);
-            transform: scale(1.0);
-            -webkit-backface-visibility: hidden;
-        }
-        
-        .gotostartbutton {
-            position: fixed;
-            bottom: 70px;
-            right: 10px;
-            display: inline-block;
-            background-position: center;
-            width: 36px;
-            height: 36px;
-            background-repeat: no-repeat;
-            background-size: 100%;
-            margin:0px;
-            background-image: url('../images/gotostartbutton.png');
-            opacity: 0.3;
-        }
-        .gotostartbutton:hover {
-            opacity: 1;
-        }
-        
-        
-        .instagram-element .instagram-photo {
-            margin: 0.2%;
-            width: 24.6%;
-        }
+p, a {
+    color: #000;
+    font-size: 13px;
+    line-height: 18px;
+    letter-spacing: .8px;
+}
+p {
+    text-align: center;
+}
+p.info {
+    text-align: justify;
+    max-width: 800px;
+    margin: auto;
+}
+a {
+    font-size:13px;
+    text-decoration: none;
+    color: #58595b;
+}
+h1, h2, h3, h4 {
+    font-family: 'Josefin Sans', sans-serif;
+}
 
-        .instagram-element .instagram-photo.image {
-            background-color: #ffffff;
-        }
+p, a {
+    font-family: Lato,Helvetica Neue,Verdana,Arial,sans-serif;
+}
 
-        body .instagram-element .instagram-photo:hover img {
-            -webkit-transform: scale(1.1);
-            -moz-transform: scale(1.1);
-            -ms-transform: scale(1.1);
-            -o-transform: scale(1.1);
-            transform: scale(1.1);
-        }
+h1 { font-size: 26px; }
+h2 { font-size: 22px; }
+h3 { font-size: 20px; }
+h4 { font-size: 16px; }
+.middletext {
+    letter-spacing: 2px;
+}
 
+.widetext {
+    letter-spacing: 8px;
+    margin: 8px;
+}
+
+h2.widetext {
+    margin-top: 12px;
+}
+
+.saletext {
+    letter-spacing: 1px;
+    color: #9f2943;
+    max-width: 800px;
+    margin: auto;
+    font-size: 18px;
+    margin-top: 9px;
+    margin-bottom: 6px;
+}
+
+.headline {
+    margin: 0 0 30px 0;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 20px;
+    border-bottom: 1px solid #000;
+    border-top: 1px solid #000;
+    padding: 15px 0;
+}
+.headline span::before, .headline span::after {
+    border-bottom: 1px solid #000000;
+    content: '';
+    position: absolute;
+    bottom: 50%;
+    width: 100%;
+}
+.button {
+    background: #000;
+    display: inline-block;
+    padding: 7px 10px;
+    border: 0;
+    color: #FFFFFF;
+    font-size: 16px;
+    font-weight: normal;
+    font-family: 'Josefin Sans', sans-serif;
+    line-height: 19px;
+    text-align: center;
+    text-transform: uppercase;
+    vertical-align: middle;
+    white-space: nowrap;
+    text-decoration: none;
+    padding-top: 9px;
+    margin:20px;
+}
+
+.whitebutton {
+    background: #ffffff;
+    color: #000000;
+    display: inline-block;
+    padding: 14px 20px;
+    font-size: 16px;
+    font-weight: normal;
+    font-family: Lato, Helvetica-Neue, sans-serif;
+    line-height: 19px;
+    text-align: center;
+    text-transform: uppercase;
+    vertical-align: middle;
+    white-space: nowrap;
+    text-decoration: none;
+    margin: 20px;
+    border: black solid 1px;
+}
+.whitebutton:hover {
+    background: #000000;
+    color: #ffffff;
+}
+
+.link {
+    color: #000000;
+    display: inline-block;
+    font-weight: normal;
+    font-family: Lato, Helvetica-Neue, sans-serif;
+    line-height: 19px;
+    text-align: center;
+    white-space: nowrap;
+    margin: 0px;
+}
+.body {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    background-color: #ffffff;
+}
+.topline {
+    border-top: 1px solid #dbdbdb;
+}
+img.logo {
+    width: 100%;
+    min-width: 200px;
+    max-width: 200px;
+    margin-top: 20px;
+    margin-bottom: 5px;
+}
+img.img-block {
+    width: 100%;
+    max-width: 600px;
+    min-width: 320px;
+}
+/* LAYOUT */
+.wrapper {
+    max-width: 1200px;
+    margin: auto;
+}
+.block {
+    margin-bottom: 40px;
+    overflow: auto;
+}
+.header {
+    margin-top: 0px;
+    margin-bottom:0px;
+}
+.headertext {
+    letter-spacing: 1px;
+    margin-top: 10px;
+    margin-bottom: 8px;
+}
+.white {
+    color: white;
+}
+.bgwhite {
+    background-color: #fff;
+}
+
+.bgblack {
+    background-color: #000;
+}
+li {
+    display: inline; /* li nebeneinander anzeigen */
+    list-style-type: none; /* ohne Aufzählungspunkte */
+}
+
+.socialbutton { 
+    width: 30%;
+    max-width: 120px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.contacts {
+    max-width: 420px;
+    margin: auto;
+}
+.contacts h4 {
+    margin-top:0px;
+}
+.icon {
+    display: inline-block;
+    background-position: center;
+    width: 20px;
+    height: 20px;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    margin:8px;
+}
+.icon-whatsapp {
+    background-image: url('../images/whatsapp.png');
+}
+.icon-mail {
+    background-image: url('../images/mail.png');
+}
+
+body .instagram-photo img {
+    -webkit-transform: scale(1.0);
+    -moz-transform: scale(1.0);
+    -ms-transform: scale(1.0);
+    -o-transform: scale(1.0);
+    transform: scale(1.0);
+    -webkit-backface-visibility: hidden;
+}
+
+.gotostartbutton {
+    position: fixed;
+    bottom: 70px;
+    right: 10px;
+    display: inline-block;
+    background-position: center;
+    width: 36px;
+    height: 36px;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    margin:0px;
+    background-image: url('../images/gotostartbutton.png');
+    opacity: 0.3;
+}
+.gotostartbutton:hover {
+    opacity: 1;
+}
+
+
+.instagram-element .instagram-photo {
+    margin: 0.2%;
+    width: 24.6%;
+}
+
+.instagram-element .instagram-photo.image {
+    background-color: #ffffff;
+}
+
+body .instagram-element .instagram-photo:hover img {
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
+
+@media (max-width: 800px) {
+
+    .desktop {
+        display:none;
+    }
+    .mobile {
+        display:block;
+    }
+
+    h1 { font-size: 22px; }
+    h2 { font-size: 18px; }
+    h3 { font-size: 17px; }
+    h4 { font-size: 14px; }
+
+    .saletext { font-size: 17px; }
+    .headline { font-size: 18px; }
+    img.logo {
+        width: 100%;
+        min-width: 160px;
+        max-width: 160px;
+        margin-top: 5px;
+        margin-bottom: -5px;
+    }     
+    .icon {
+        width: 16px;
+        height: 16px;
+    }
+
+}
         
-        @media (max-width: 800px) {
-            
-            .desktop {
-                display:none;
-            }
-            .mobile {
-                display:block;
-            }
-            
-            h1 { font-size: 22px; }
-            h2 { font-size: 18px; }
-            h3 { font-size: 17px; }
-            h4 { font-size: 14px; }
-            
-            .saletext { font-size: 17px; }
-            .headline { font-size: 18px; }
-            img.logo {
-                width: 100%;
-                min-width: 160px;
-                max-width: 160px;
-                margin-top: 5px;
-                margin-bottom: -5px;
-            }     
-            .icon {
-                width: 16px;
-                height: 16px;
-            }
-            
-        }
-        
+
+
+
+
+
+
+/* SLIDER STUFF */
+
+.jssorb05 {
+    position: absolute;
+}
+.jssorb05 div, .jssorb05 div:hover, .jssorb05 .av {
+    position: absolute;
+    /* size of bullet elment */
+    width: 16px;
+    height: 16px;
+    background: url('images/b05.png') no-repeat;
+    overflow: hidden;
+    cursor: pointer;
+}
+.jssorb05 div {
+    background-position: -7px -7px;
+}
+.jssorb05 div:hover, .jssorb05 .av:hover {
+    background-position: -37px -7px;
+}
+.jssorb05 .av {
+    background-position: -67px -7px;
+}
+.jssorb05 .dn, .jssorb05 .dn:hover {
+    background-position: -97px -7px;
+}
+.jssora22l, .jssora22r {
+    display: block;
+    position: absolute;
+    /* size of arrow element */
+    width: 40px;
+    height: 58px;
+    cursor: pointer;
+    background: url('images/a22.png') center center no-repeat;
+    overflow: hidden;
+}
+.jssora22l {
+    background-position: -10px -31px;
+}
+.jssora22r {
+    background-position: -70px -31px;
+}
+.jssora22l:hover {
+    background-position: -130px -31px;
+}
+.jssora22r:hover {
+    background-position: -190px -31px;
+}
+.jssora22l.jssora22ldn {
+    background-position: -250px -31px;
+}
+.jssora22r.jssora22rdn {
+    background-position: -310px -31px;
+}
+.jssora22l.jssora22lds {
+    background-position: -10px -31px;
+    opacity: .3;
+    pointer-events: none;
+}
+.jssora22r.jssora22rds {
+    background-position: -70px -31px;
+    opacity: .3;
+    pointer-events: none;
+}
+
+
