--- a/css/kina.css
+++ b/css/kina.css
@@ -303,7 +303,7 @@ body .instagram-element .instagram-photo:hover img {
     /* size of bullet elment */
     width: 16px;
     height: 16px;
-    background: url('images/b05.png') no-repeat;
+    background: url('../images/b05.png') no-repeat;
     overflow: hidden;
     cursor: pointer;
 }
@@ -326,7 +326,7 @@ body .instagram-element .instagram-photo:hover img {
     width: 40px;
     height: 58px;
     cursor: pointer;
-    background: url('images/a22.png') center center no-repeat;
+    background: url('../images/a22.png') center center no-repeat;
     overflow: hidden;
 }
 .jssora22l {
