--- a/css/kina.css
+++ b/css/kina.css
@@ -226,6 +226,7 @@ body .instagram-photo img {
     width: 80%;
     min-width: 160px;
     margin-top: 20px;
+    margin-bottom: 10px;
 }
 
 .gotostartbutton {
