--- a/css/kina.css
+++ b/css/kina.css
@@ -230,7 +230,7 @@ body .instagram-photo img {
     background-position: center;
     background-repeat: no-repeat;
     background-size: 100%;
-    background-image: url('../images/logobg.png');
+    background-image: url('../images/logobg.jpg');
 }
 
 .gotostartbutton {
