--- a/css/kina.css
+++ b/css/kina.css
@@ -258,7 +258,7 @@ body .instagram-photo img {
 }
 
 .instagram-element .instagram-photo.image {
-    background-color: #ffffff;
+    background-color: #000;
 }
 
 body .instagram-element .instagram-photo:hover img {
@@ -267,7 +267,7 @@ body .instagram-element .instagram-photo:hover img {
     -ms-transform: scale(1.1);
     -o-transform: scale(1.1);
     transform: scale(1.1);
-    opacity: 0.8;
+    opacity: 0.7;
 }
 
 @media (max-width: 800px) {
