--- a/css/kina.css
+++ b/css/kina.css
@@ -11,6 +11,8 @@ p, a {
     font-size: 13px;
     line-height: 18px;
     letter-spacing: .8px;
+    margin: 0;
+    color: #999;
 }
 p {
     text-align: center;
