--- a/css/kina.css
+++ b/css/kina.css
@@ -285,7 +285,8 @@ body .instagram-element .instagram-photo:hover img {
     -ms-transform: scale(1.1);
     -o-transform: scale(1.1);
     transform: scale(1.1);
-    opacity: 0.7;
+    background-color: black;
+    opacity: 0.8;
 }
 
 @media (max-width: 800px) {
