--- a/css/kina.css
+++ b/css/kina.css
@@ -171,14 +171,12 @@ img.img-block {
     left: 0;
     width: 100%;
     text-align: center;
-    padding: 5px;
-    padding-bottom: 2px;
+    padding: 15px;
+    padding-bottom: 12px;
     margin: 0px;
-    background-color: black;
+    background-color: white;
+    opacity: 0.6;
     z-index: 999;
-}
-.stickytop a {
-    color: white;
 }
 
 
