--- a/css/kina.css
+++ b/css/kina.css
@@ -175,8 +175,9 @@ img.img-block {
     padding-bottom: 12px;
     margin: 0px;
     background-color: white;
-    opacity: 0.6;
+    opacity: 0.75;
     z-index: 999;
+    border-bottom: 1px solid #dbdbdb;
 }
 
 
