--- a/css/kina.css
+++ b/css/kina.css
@@ -136,9 +136,7 @@ h2.widetext {
     text-align: center;
     background-color: #ffffff;
 }
-.topline {
-    border-top: 1px solid #dbdbdb;
-}
+
 
 img.logo {
     width: 100%;
@@ -155,15 +153,20 @@ img.img-block {
 
 .mainnav {
     margin: 5px;
-    margin-top: 10px;
+    margin-top: 8px;
+    padding: 15px;
 }
-.mainnav a {
-    margin: 5px;
-}
+
 .mainnav h4 {
     margin: 0;
     display: inline;
 }
+
+.topline {
+    padding: 15px;
+    border-top: 1px solid #dbdbdb;
+}
+
 /* Sticky NAV */
 .stickytop {
     position: fixed;
@@ -172,12 +175,10 @@ img.img-block {
     width: 100%;
     text-align: center;
     padding: 15px;
-    padding-bottom: 12px;
     margin: 0px;
     background-color: white;
     opacity: 0.9;
     z-index: 999;
-    border-bottom: 1px solid #dbdbdb;
 }
 
 
