--- a/css/kina.css
+++ b/css/kina.css
@@ -154,7 +154,12 @@ img.img-block {
 .mainnav {
     margin: 5px;
     margin-top: 8px;
-    padding: 15px;
+    padding: 8px;
+}
+
+.mainnav a {
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .mainnav h4 {
@@ -163,7 +168,7 @@ img.img-block {
 }
 
 .topline {
-    padding: 15px;
+    padding: 8px;
     border-top: 1px solid #dbdbdb;
 }
 
@@ -174,7 +179,6 @@ img.img-block {
     left: 0;
     width: 100%;
     text-align: center;
-    padding: 15px;
     margin: 0px;
     background-color: white;
     opacity: 0.9;
