--- a/css/kina.css
+++ b/css/kina.css
@@ -318,7 +318,7 @@ body .instagram-element .instagram-photo:hover img {
     margin: -10px;
 }
 
-.instagram-kinastudio-inspire .instagram-element {
+.instagram-element {
     margin: 0.5%;
     width: 32.33%;
 }
