--- a/css/kina.css
+++ b/css/kina.css
@@ -315,7 +315,7 @@ body .instagram-element .instagram-photo:hover img {
 /* CUSTOMIZING FOR EACH INSTAGRAM GRID */
 
 .instagram-kinastudio-inspire {
-    margin: -10px;
+    margin: -0.5%;
 }
 
 .instagram-element .instagram-photo {
