--- a/css/kina.css
+++ b/css/kina.css
@@ -312,6 +312,9 @@ body .instagram-element .instagram-photo:hover img {
     opacity: 0.8;
 }
 
+.instagram-element .instagram-photo .element-meta { color: #fff; font-size: 16px; font-weight: 100; line-height: 16px; }
+
+
 /* CUSTOMIZING FOR EACH INSTAGRAM GRID */
 
 .instagram-kinastudio-inspire {
@@ -439,4 +442,5 @@ body .instagram-element .instagram-photo:hover img {
     pointer-events: none;
 }
 
-
+.fancybox-overlay .username-ui { font-family: 'Oswald',arial,serif; font-size: 16px; font-weight: 400; }
+.fancybox-overlay .description-ui { white-space: nowrap; width: 100%; overflow: hidden; text-overflow: ellipsis;  }
