--- a/css/kina.css
+++ b/css/kina.css
@@ -334,26 +334,30 @@ body .instagram-element .instagram-photo:hover img {
 
 
 /* 3 Spalten, Mehr Abstand zwischen Elements */
-.instagram-element { margin: -0.8%; }
-.instagram-element .instagram-photo { width: 31.7%; margin: 0.8%; }
+/* .instagram-element { margin: -0.8%; } */
+/* .instagram-element .instagram-photo { width: 31.7%; margin: 0.8%; } */
 
 /* 3 Spalten, kleiner Abstand */
-.instagram-element { margin: -0.1%; }
-.instagram-element .instagram-photo { width: 33.1%; margin: 0.1%; }
+/* .instagram-element { margin: -0.1%; } */
+/* .instagram-element .instagram-photo { width: 33.1%; margin: 0.1%; } */
 
 /* 3 Spalten, kein Abstand */
 .instagram-element { margin: 0; }
-.instagram-element .instagram-photo { width: 33.3%; margin: 0; }
+.instagram-element .instagram-photo { width: 33.33%; margin: 0; }
 
 
 
 /* MOBILE */
 @media (max-width: 1000px) {
-    .instagram-element { margin: -0.2%; }
+    /* .instagram-element { margin: -0.2%; } */
     /* .instagram-element .instagram-photo { width: 32.9%; margin: 0.2%; } */
-    .instagram-element .instagram-photo { width: 49.6%; margin: 0.2%; }
+    /* .instagram-element .instagram-photo { width: 49.6%; margin: 0.2%; } */
 
-    .instagram-kinastudio-wedding .instagram-photo { width: 32.9%; margin: 0.2%; }
+    .instagram-element { margin: 0; }
+    .instagram-element .instagram-photo { width: 50%; margin: 0; }
+
+    /* .instagram-kinastudio-wedding .instagram-photo { width: 32.9%; margin: 0.2%; } */
+    .instagram-kinastudio-wedding .instagram-photo { width: 33.33%; margin: 0; }
 }
 
 
