--- a/css/kina.css
+++ b/css/kina.css
@@ -30,7 +30,7 @@ a {
 h1, h2, h3, h4 {
     font-family: "lato", sans-serif;
     font-weight: 300;
-    color: #6C6C6C;
+    color: black;
 }
 
 p, a {
@@ -159,8 +159,8 @@ img.img-block {
 }
 
 .mainnav a {
-    margin-left: 12px;
-    margin-right: 12px;
+    margin-left: 10px;
+    margin-right: 10px;
     padding:5px;
     padding-top: 8px;
 
