--- a/css/kina.css
+++ b/css/kina.css
@@ -29,12 +29,13 @@ a {
 }
 h1, h2, h3, h4 {
     font-family: "lato", sans-serif;
-    font-weight: 300;
+    font-weight: 400;
     color: black;
 }
 
 p, a {
-    font-family: Lato,Helvetica,Verdana,Arial,sans-serif;
+    font-family: "lato", sans-serif;
+    font-weight: 300;
 }
 
 h1 { font-size: 28px; }
@@ -47,7 +48,7 @@ h4 { font-size: 18px; }
 }
 
 .widetext {
-    letter-spacing: 8px;
+    letter-spacing: 7px;
     margin: 8px;
 }
 
@@ -69,7 +70,7 @@ h2.widetext {
     margin: 0 0 30px 0;
     text-align: center;
     text-transform: uppercase;
-    font-size: 20px;
+    font-size: 18px;
     border-bottom: 1px solid #000;
     border-top: 1px solid #000;
     padding: 15px 0;
@@ -159,8 +160,8 @@ img.img-block {
 }
 
 .mainnav a {
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 6px;
+    margin-right: 6px;
     padding:5px;
     padding-top: 8px;
 
