--- a/css/kina.css
+++ b/css/kina.css
@@ -29,7 +29,7 @@ a {
 }
 h1, h2, h3, h4 {
     font-family: "lato", sans-serif;
-    font-weight: 300;
+    font-weight: 400;
     color: black;
 }
 
@@ -71,8 +71,8 @@ h2.widetext {
     text-align: center;
     text-transform: uppercase;
     font-size: 18px;
-    border-bottom: 1px solid #000;
-    border-top: 1px solid #000;
+    border-top: 1px solid #dfdfdf;
+    border-bottom: 1px solid #dfdfdf;
     padding: 15px 0;
 }
 .headline span::before, .headline span::after {
