--- a/css/kina.css
+++ b/css/kina.css
@@ -471,4 +471,4 @@ body .instagram-element .instagram-photo:hover img {
 .fancybox-overlay .date-ui,
 .fancybox-wrap .location-ui,
 .fancybox-overlay .location-ui
-{ color:#dddddd; font-size: 12px; font-weight: 300; margin-bottom:3px; text-transform:none; }
+{ color:#aeaeae; font-size: 12px; font-weight: 300; margin-bottom:3px; text-transform:none; }
