--- a/css/kina.css
+++ b/css/kina.css
@@ -187,6 +187,14 @@ img.img-block {
     z-index: 999;
 }
 
+.mobilemenuicon {
+	position: absolute;
+    left: 18px;
+    top: 18px;
+    font-size: 18px;
+    color: antiquewhite;
+}
+
 
 /* LAYOUT */
 .wrapper {
@@ -363,11 +371,16 @@ body .instagram-element .instagram-photo:hover img {
         display:inline;
     }
 
-/*    h1 { font-size: 22px; }
-    h2 { font-size: 18px; }
-    h3 { font-size: 17px; }
-    h4 { font-size: 14px; }
-    */
+
+	.mainnav a {
+		padding: 10px 5px;
+	    text-align: left;
+	    border-top: 1px solid #dedede;
+	}
+
+	.mainnav a:hover {
+	    color: black;
+	}
 
     img.logo {
         width: 100%;
