--- a/css/kina.css
+++ b/css/kina.css
@@ -18,7 +18,7 @@ h1, h2, h3, h4 {
 
 p, a {
     color: #000;
-    font-size: 13px;
+    font-size: 12px;
     line-height: 18px;
     letter-spacing: .8px;
     margin: 0;
@@ -38,9 +38,9 @@ a {
 }
 
 h1 { font-size: 28px; }
-h2 { font-size: 24px; }
-h3 { font-size: 22px; }
-h4 { font-size: 18px; }
+h2 { font-size: 20px; }
+h3 { font-size: 18px; }
+h4 { font-size: 14px; }
 
 .middletext {
     letter-spacing: 2px;
@@ -68,7 +68,7 @@ h2.widetext {
 }
 
 .headline {
-    margin: 0 0 10px 0;
+    margin: 0;
     text-align: center;
     text-transform: uppercase;
     font-size: 24px;
@@ -86,12 +86,11 @@ h2.widetext {
 
 .whitebutton {
     background: #ffffff;
-    color: grey;
+    color: black;
     display: inline-block;
-    padding: 12px 18px;
-    font-size: 13px;
+    padding: 8px 28px;
+    font-size: 11px;
     font-weight: normal;
-    line-height: 19px;
     text-align: center;
     text-transform: uppercase;
     vertical-align: middle;
@@ -175,8 +174,8 @@ img.img-block {
 .mobilemenuicon {
 	position: absolute;
     left: 10px;
-    top: 19px;
-    font-size: 16px;
+    top: 18px;
+    font-size: 14px;
     color: antiquewhite;
 }
 
@@ -328,7 +327,7 @@ body .instagram-element .instagram-photo:hover img {
 .instagram-element .instagram-photo { width: 33.33%; margin: 0; }*/
 
 /* 3 Spalten, kleiner Abstand */
-.instagram-element { margin: 0.4% -0.4%; }
+.instagram-element { margin: 0.4% -0.4%; padding-top: 7px; }
 .instagram-element .instagram-photo { width: 32.5%; margin: 0.416%; }
 
 @media (max-width: 1400px) {
