--- a/css/kina.css
+++ b/css/kina.css
@@ -136,16 +136,17 @@ img.img-block {
 }
 
 .mainnav {
-	padding: 5px;
+	padding: 10px;
 }
 
 .mainnav a {
-    letter-spacing: 2px;
+    letter-spacing: 1.5px;
+    font-weight: 400;
     margin-left: 6px;
     margin-right: 6px;
     padding:5px;
     padding-top: 6px;
-    font-size: 14px;
+    font-size: 13px;
     color: #6C6C6C;
 }
 
