--- a/css/kina.css
+++ b/css/kina.css
@@ -140,14 +140,14 @@ img.img-block {
 }
 
 .mainnav a {
-    letter-spacing: 1.5px;
-    font-weight: 400;
+    letter-spacing: 1px;
+    font-weight: 500;
     margin-left: 6px;
     margin-right: 6px;
     padding:5px;
     padding-top: 6px;
-    font-size: 13px;
-    color: #6C6C6C;
+    font-size: 12px;
+    color: #999;
 }
 
 .mainnav a:hover {
