--- a/css/kina.css
+++ b/css/kina.css
@@ -157,6 +157,7 @@ img.img-block {
 .topline {
     padding: 5px;
     border-top: 1px solid #dbdbdb;
+    border-bottom: 1px solid #dfdfdf;
 }
 
 /* Sticky NAV */
@@ -366,7 +367,8 @@ body .instagram-element .instagram-photo:hover img {
 	}
 
 	.mainnav a {
-		padding: 10px 5px;
+        margin-top: -2px;
+        padding: 12px 5px;
 	    text-align: left;
 	    border-top: 1px solid #dedede;
 	}
@@ -482,3 +484,10 @@ body .instagram-element .instagram-photo:hover img {
 .fancybox-wrap .location-ui,
 .fancybox-overlay .location-ui
 { color:#aeaeae; font-size: 12px; font-weight: 300; margin-bottom:3px; text-transform:none; }
+
+/* CUSTOM SLIDER STUFF */
+.slider-wrapper { position: relative; margin: 0 auto; top: 0px; left: 0px; width: 1200px; height: 800px; overflow: hidden; visibility: hidden; }
+/* .slider-wrapper { margin-bottom: 12px; } */
+.slider-slides { cursor: default; position: relative; top: 0px; left: 0px; width: 1200px; height: 800px; overflow: hidden; }
+
+
