--- a/css/kina.css
+++ b/css/kina.css
@@ -458,6 +458,7 @@ body .instagram-element .instagram-photo:hover img {
 
 /* CUSTOM SLIDER STUFF */
 .slider-wrapper { position: relative; margin: 0 auto; top: 0px; left: 0px; width: 1200px; height: 800px; overflow: hidden; visibility: hidden; }
+.slider-wrapper { margin-bottom: -1px; } /* hide the gap between slider and border of headline */
 /* .slider-wrapper { margin-bottom: 12px; } */
 .slider-slides { cursor: default; position: relative; top: 0px; left: 0px; width: 1200px; height: 800px; overflow: hidden; }
 
