--- a/css/kina.css
+++ b/css/kina.css
@@ -45,7 +45,7 @@ h4 { font-size: 16px; }
 .middletext { letter-spacing: 2px; }
 .widetext { letter-spacing: 4px; margin: 8px; }
 h2.widetext { margin-top: 12px; }
-.welcomerow { display: block; font-weight:400; padding-top:10px; font-size:12px; color:#999; }
+.welcomerow { display: block; font-weight:400; padding-top:10px; font-size:14px; color:#999; letter-spacing: 1px; }
 
 .saletext {
     letter-spacing: 1px;
@@ -133,7 +133,7 @@ img.img-block {
 }
 
 .mainnav a {
-    letter-spacing: 1px;
+    letter-spacing: 2px;
     font-weight: 500;
     margin-left: 6px;
     margin-right: 6px;
