new font for h1 + h2

--- a/css/kina.css
+++ b/css/kina.css
@@ -16,6 +16,7 @@ p, a, h1, h2, h3, h4 {
 h1, h2 {
     font-family: "Didot W02 Roman","Didot", serif;
     font-family: CormorantGaramond-Light,serif;
+    font-family: 'Oswald', sans-serif;
 }
 
 
