--- a/css/kina.css
+++ b/css/kina.css
@@ -47,6 +47,7 @@ h4 { font-size: 16px; }
 .widetext { letter-spacing: 4px; margin: 8px; }
 h2.widetext { margin-top: 12px; }
 
+/*
 .welcomerow {
     display: block;
     font-weight: 300;
@@ -55,6 +56,21 @@ h2.widetext { margin-top: 12px; }
     letter-spacing: 1px;
     color: #f0f0f0;
     background: black;
+}
+*/
+
+.welcomerow {
+    width: 100%;
+    display: block;
+    font-weight: 300;
+    padding: 9px;
+    font-size: 14px;
+    letter-spacing: 1px;
+    color: #666;
+    background: #e4e4e4;
+    left: 0;
+    position: absolute;
+    opacity: 0.96;
 }
 
 .saletext {
@@ -125,7 +141,7 @@ img.logo {
     width: 100%;
     min-width: 180px;
     max-width: 180px;
-    margin-top: 15px;
+    margin-top: 55px;
     margin-bottom: 0px;
 }
 img.img-block {
